# depot-rs

./: Cargo.toml  default.toml
src/: cgi.rs  crates.rs  git.rs  main.rs  util.rs
