[package]
name = "depot"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "0.2.6"
router = "0.1.0"
mount = "0.0.10"
crowbar = {version = "0.1.0", path = "../crowbar"}
#git2 = "0.3.4"
hyper = "0.7.2"
regex = "0.1.48"
regex_macros = "0.1.27"
mdo = "0.2.0"
