[package]
name = "depot"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "0.2.6"
router = "0.1.0"
mount = "0.0.10"
crowbar = {version="0.1.0", git="https://github.com/panicbit/crowbar-rs"}
#git2 = "0.3.4"
hyper = "0.7.2"
regex = "0.1.48"
regex_macros = "0.1.27"
mdo = "0.2.0"
logger = {version="0.0.3", git = "https://github.com/iron/logger.git"}
log = "0.3.5"
flexi_logger = "0.3.3"