[package]
name = "depot"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "0.3.0"
router = "0.1.1"
mount = "0.1.0"
crowbar = {version="0.1.0", git="https://github.com/panicbit/crowbar-rs"}
#git2 = "0.3.4"
hyper = "0.9.6"
regex = "0.1.71"
regex_macros = "0.1.35"
mdo = "0.2.0"
logger = "0.0.3"
log = "0.3.6"
flexi_logger = "0.5.0"
